@@ -4,13 +4,16 @@ import io.mikovsky.workly.domain.Project;
 import io.mikovsky.workly.domain.ProjectMember;
 import io.mikovsky.workly.domain.User;
 import io.mikovsky.workly.exceptions.WorklyException;
-import io.mikovsky.workly.repositories.ProjectMemberRepository;
 import io.mikovsky.workly.repositories.ProjectRepository;
-import io.mikovsky.workly.web.v1.projects.payload.AddMembersRequest;
+import io.mikovsky.workly.web.v1.projects.payload.AddMemberRequest;
 import io.mikovsky.workly.web.v1.projects.payload.CreateProjectRequest;
 import io.mikovsky.workly.web.v1.projects.payload.ProjectMemberResponse;
 import io.mikovsky.workly.web.v1.projects.payload.ProjectResponse;
+import io.mikovsky.workly.web.v1.projects.payload.UpdateProjectRequest;
 import lombok.RequiredArgsConstructor;
+import one.util.streamex.StreamEx;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -18,101 +21,122 @@ import javax.validation.constraints.NotNull;
 import java.time.Instant;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class ProjectService {
 
-    private final UserService userService;
-
     private final ProjectRepository projectRepository;
 
-    private final ProjectMemberRepository projectMemberRepository;
+    private final UserService userService;
+
+    private final ProjectMemberService projectMemberService;
 
     @Transactional
     public List<ProjectResponse> getProjectsForUser(User user) {
-        List<ProjectMember> projectMembers = projectMemberRepository.findAllByUserId(user.getId());
-        List<Long> projectIDs = projectMembers.stream().map(ProjectMember::getProjectId).collect(Collectors.toList());
-        List<Project> projects = projectRepository.findAllById(projectIDs);
-        return projects.stream()
+        List<Long> projectIDs = StreamEx.of(projectMemberService.findAllByUserId(user.getId()))
+                .map(ProjectMember::getProjectId)
+                .toList();
+
+        return StreamEx.of(projectRepository.findAllById(projectIDs))
                 .map(ProjectResponse::fromProject)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Transactional
     public ProjectResponse saveProjectForUser(CreateProjectRequest request, User user) {
-        Instant now = Instant.now();
-
-        Project project = Project.builder()
-                .name(request.getName())
-                .userId(user.getId())
-                .createdAt(now)
-                .updatedAt(now)
-                .build();
-        Project savedProject = projectRepository.save(project);
-
-        ProjectMember projectMember = ProjectMember.builder()
-                .userId(user.getId())
-                .projectId(savedProject.getId())
-                .build();
-        projectMemberRepository.save(projectMember);
+        Project project = Project.of(user.getId(), request.getName());
+        Project savedProject = save(project);
+        ProjectMember projectMember = ProjectMember.of(savedProject.getId(), user.getId());
+        projectMemberService.save(projectMember);
 
         return ProjectResponse.fromProject(savedProject);
     }
 
     @Transactional
-    public List<ProjectMemberResponse> getMembersForProjectWithId(Long projectId, User user) {
+    public ProjectResponse updateProject(Long projectId, UpdateProjectRequest request, User user) {
         Project project = findById(projectId);
+        checkIfProjectOwner(project, user.getId());
 
-        List<ProjectMember> projectMembers = projectMemberRepository.findAllByProjectId(project.getId());
+        project.setName(request.getName());
+        Project updatedProject = update(project);
 
-        List<Long> membersIds = projectMembers
-                .stream()
-                .map(ProjectMember::getUserId)
-                .collect(Collectors.toList());
-
-        if (!membersIds.contains(user.getId())) {
-            throw WorklyException.forbidden();
-        }
-
-        return userService.findAllWhereIdIn(membersIds)
-                .stream()
-                .map(ProjectMemberResponse::fromUser)
-                .collect(Collectors.toList());
+        return ProjectResponse.fromProject(updatedProject);
     }
 
     @Transactional
-    public List<ProjectMemberResponse> addMembersToProjectWithId(Long projectId, AddMembersRequest request, User user) {
+    public ResponseEntity<Void> deleteProject(Long projectId, User user) {
         Project project = findById(projectId);
+        checkIfProjectOwner(project, user.getId());
 
-        if (!Objects.equals(project.getUserId(), user.getId())) {
-            throw WorklyException.forbidden();
-        }
+        projectMemberService.deleteAllByProjectId(projectId);
+        projectRepository.deleteById(projectId);
 
-        List<ProjectMember> projectMembers = request.getUserIds()
-                .stream()
-                .map(userId -> ProjectMember.builder()
-                        .userId(userId)
-                        .projectId(project.getId())
-                        .build())
-                .collect(Collectors.toList());
+        return ResponseEntity.status(HttpStatus.NO_CONTENT).build();
+    }
 
-        List<ProjectMember> newProjectMembers = projectMemberRepository.saveAll(projectMembers);
+    @Transactional
+    public List<ProjectMemberResponse> getMembersForProjectWithId(Long projectId, User user) {
+        Project project = findById(projectId);
+        List<Long> membersIds = projectMemberService.findAllMembersIdsForProjectWithId(project.getId());
+        checkIfProjectMember(membersIds, user.getId());
 
-        List<Long> newMembersIds = newProjectMembers
-                .stream()
-                .map(ProjectMember::getUserId)
-                .collect(Collectors.toList());
-
-        return userService.findAllWhereIdIn(newMembersIds)
-                .stream()
+        return StreamEx.of(userService.findAllWhereIdIn(membersIds))
                 .map(ProjectMemberResponse::fromUser)
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    @Transactional
+    public ProjectMemberResponse addMemberToProjectWithId(Long projectId, AddMemberRequest request, User user) {
+        Project project = findById(projectId);
+        checkIfProjectOwner(project, user.getId());
+
+        User member = userService.findById(request.getUserId());
+        projectMemberService.save(ProjectMember.of(project.getId(), member.getId()));
+
+        return ProjectMemberResponse.fromUser(member);
+    }
+
+    @Transactional
+    public ResponseEntity<Void> deleteMemberFromProject(Long projectId, Long memberId, User user) {
+        Project project = findById(projectId);
+        checkIfProjectOwner(project, user.getId());
+
+        User member = userService.findById(memberId);
+        List<Long> membersIds = projectMemberService.findAllMembersIdsForProjectWithId(project.getId());
+        checkIfProjectMember(membersIds, member.getId());
+
+        projectMemberService.deleteByProjectIdAndUserId(project.getId(), memberId);
+
+        return ResponseEntity.status(HttpStatus.NO_CONTENT).build();
     }
 
     public @NotNull Project findById(Long id) {
         return projectRepository.findById(id).orElseThrow(WorklyException::projectNotFound);
+    }
+
+    public Project save(Project project) {
+        Instant now = Instant.now();
+        project.setCreatedAt(now);
+        project.setUpdatedAt(now);
+        return projectRepository.save(project);
+    }
+
+    public Project update(Project project) {
+        project.setUpdatedAt(Instant.now());
+        return projectRepository.save(project);
+    }
+
+    private void checkIfProjectOwner(Project project, Long userId) {
+        if (!Objects.equals(project.getUserId(), userId)) {
+            throw WorklyException.forbidden();
+        }
+    }
+
+    private void checkIfProjectMember(List<Long> membersIds, Long userId) {
+        if (!membersIds.contains(userId)) {
+            throw WorklyException.forbidden();
+        }
     }
 
 }
